@@ -1179,6 +1179,20 @@ domain   : frequency
 Clipping is done per record.
 
 
+\section{New functions}
+
+The functions listed in this section are new. They did not exist in
+the original RiscOS version of ASM.
+
+\paragraph{signaldir}: Set the directory path where to store and read signals.
+
+\bc
+\begin{verbatim}
+command: signaldir  directory-path
+\end{verbatim}
+\ec
+
+
 \chapter{Data format}
 
 \section{Header}\label{sec:header}
